LB_SECURITY_GRP/lb_sg.tf
resource "aws_security_group" "backend_lb" {
  name        = "backend-tf-module"
  description = "Security group for backend load balancer using terraform"
  vpc_id      = var.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 8000
    to_port     = 8000
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Backend_lb_TF"
  }
}

resource "aws_security_group" "frontend_lb" {
  name        = "frontend-tf-module"
  description = "Security group for frontend load balancer using terraform"
  vpc_id      = var.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Frontend_lb_TF"
  }
}
